Add grid resizing functionality

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <button type="button" class="toggle eraser exclusive">Eraser</button>
                     <button type="button" class="toggle clear">Clear</button>
                     <button type="button" class="toggle grid-lines">Grid Lines</button>
-                    <div class="grid-size">
-                        <input type="range" id="grid-size" min="0" max="50" value="16">
-                        <label for="grid-size" class="grid-size">16x16</label>
+                    <div class="grid-size-container">
+                        <input type="range" id="grid-size-input" min="16" max="50" value="16" step="1">
+                        <label for="grid-size-input" class="grid-size-label">16x16</label>
                     </div>
                 </div>
                 <div class="grid"></div>
